tests/typing/bad/testfile-mutable-1.scala
class A { val x = 1; var y = {x = 2; 3} }
object Main { def main(args: Array[String]) { } }
